# emotion-song-recommendation

./: .dockerignore  .gitignore  dev.py  docker-compose.coolify.yml  pyproject.toml
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/services/: emotion_classifier.py  face_detector.py  preprocessor.py  recommender_client.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/ControlButtons/: index.tsx
frontend/src/components/EmotionBadge/: index.tsx
frontend/src/components/RecommendationList/: index.tsx
frontend/src/components/SongCard/: index.tsx
frontend/src/components/WebcamPanel/: index.tsx
frontend/src/hooks/: useDetection.ts  useRecommendation.ts  useWebcam.ts
frontend/src/pages/: HomePage.tsx  KuesionerPage.tsx
frontend/src/services/: api.ts
frontend/src/theme/: cartoonTheme.ts
frontend/src/types/: index.ts
models/: mini_xception_final.h5  mini_xception_final.onnx  mini_xception_metadata.json  mini_xception_phase1_best.h5  yolov10_metadata.json
scripts/: README.md  export_onnx.py
